fix: css overflow on phone

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -12,7 +12,7 @@
   text-align: center;
 
   input {
-    font-size: 32px;
+    font-size: medium;
     margin: 5px 0;
     padding: 3px;
     background: none;
@@ -36,7 +36,7 @@
   padding: 10px;
 
   span {
-    margin: 10px;
+    margin: 20px 10px;
     max-width: 100px;
     overflow: scroll;
     word-break: break-all;
